--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "^7.2",
+    "php": ">=7.4",
     "contributte/bootstrap": "^0.5.0",
     "contributte/di": "^0.5.0",
     "contributte/application": "^0.5.0",
@@ -24,9 +24,9 @@
     "contributte/tracy": "^0.5.0"
   },
   "require-dev": {
-    "ninjify/qa": "^0.11",
-    "ninjify/nunjuck": "^0.3.0",
-    "contributte/dev": "^0.2.0"
+    "ninjify/qa": "^0.12",
+    "ninjify/nunjuck": "^0.4",
+    "contributte/dev": "^0.3"
   },
   "autoload": {
     "psr-4": {
@@ -38,7 +38,7 @@
   "minimum-stability": "dev",
   "config": {
     "platform": {
-      "php": "7.3"
+      "php": "7.4"
     }
   }
 }
